# serverless-etl-aws

./: .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: jekyll-gh-pages.yml
docs/: index.md  main.md
docs/src/: build_lambda.md
docs/src/glue_scripts/: bronze_to_silver.md
docs/src/lambda_functions/: data_downloader.md  fetch_raw_data.md  s3_operations.md
scripts/: build_lambda.py
src/glue_scripts/: bronze_to_silver.py
src/lambda/: lambda_function.py
src/lambda_functions/: data_downloader.py  fetch_raw_data.py  lambda_function.py  lambda_orchestrator.py  s3_operations.py
src/notebooks_spark/: Nyc_spark_pre.ipynb
terraform/: main.tf  provider.tf  variables.tf
tests/code/: conftest.py  test_build_lambda.py  test_data_downloader.py  test_fetch_raw_data.py  test_lambda_function.py  test_lambda_orchestrator.py  test_s3_operations.py
