[tool.poetry]
name = "dataeng"
version = "0.1.0"
description = "Data Engineering in AWS"
authors = ["BK"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.11"
boto3 = "^1.35.86"
pandas = "^2.2.3"
pyarrow = "^18.1.0"
pytest = "^8.3.4"
pytest-mock = "^3.14.0"
freezegun = "^1.5.1"
requests = "^2.32.3"
moto = "^5.0.25"
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
pytest-cov = "^6.0.0"
pre-commit = "^4.0.1"
mkdocs = "^1.6.1"
mkdocstrings-python = "^1.13.0"
mkdocs-material = "^9.5.49"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



# Black formatting
[tool.black]
line-length = 150
include = '\.pyi?$'
exclude = '''
/(
      .eggs         # exclude a few common directories in the
    | .git          # root of the project
    | .hg
    | .mypy_cache
    | .tox
    | venv
    | .venv
    | _build
    | buck-out
    | build
    | dist
  )/
'''
# iSort
[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
virtual_env = ".venv"

[tool.flake8]
exclude = ".venv"
ignore = ["E501", "W503", "E226"]

[tool.pyupgrade]
py39plus = true

# Pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

# Pytest cov
[tool.coverage.run]
omit=[""]
